# Janmabhoomi

./: AGENTS.md  Agent.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  app.js  biome.json  cliff.toml  coverage.xml  eslint.config.js  index.html  knip.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  streamlit_app.py  styles.css
data/: db.json
specs/: README.md
specs/0001-civic-desk-baseline/: plan.md  spec.md  tasks.md
tests/: test_repository_health.py
