[project]
name = "janmabhoomi-civic-desk"
version = "0.1.0"
description = "Civic services prototype for land records, citizen requests, and admin workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
  "tests/*",
  ".venv/*",
  "venv/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]

[tool.vulture]
paths = ["streamlit_app.py"]
min_confidence = 80

[tool.pylint.main]
ignore = [".venv", "venv"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["missing-module-docstring", "missing-function-docstring"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
